--- a/staroid.yml
+++ b/staroid.yml
@@ -25,3 +25,5 @@ deploy:
       paths:
       - Deployment:superset:spec.template.spec.containers[0].env[0].value # USERNAME
       - Deployment:superset:spec.template.spec.containers[0].env[1].value # PASSWORD
+starRank:
+  rate: 1.5
