Fix incorrect manifest paths
Signed-off-by: GitHub <noreply@github.com>

--- a/staroid.yaml
+++ b/staroid.yaml
@@ -23,7 +23,7 @@ deploy:
       optional: false
 
       paths:
-      - Deployment:superset:spec.template.spec.containers[0].env[0].value # USERNAME
-      - Deployment:superset:spec.template.spec.containers[0].env[1].value # PASSWORD
+      - Deployment:cloud9-v2:spec.template.spec.containers[0].env[0].value # USERNAME
+      - Deployment:cloud9-v2:spec.template.spec.containers[0].env[1].value # PASSWORD
 starRank:
   rate: 1.0
