Revert "Update staroid.yml"

--- a/staroid.yaml
+++ b/staroid.yaml
@@ -15,15 +15,15 @@ deploy:
       type: STRING
       defaultValue: "asatomi"
       optional: false
+      paths:
+      - Deployment:c9idev3-deployment:spec.template.spec.containers[0].env[0].value 
 
     - name: Password
       description: The password of the Cloud9 IDE user.
       type: STRING
       defaultValue: "password"
       optional: false
-      
       paths:
-      - Deployment:cloud9-v3:spec.template.spec.containers[0].env[0].value # USERNAME
-      - Deployment:cloud9-v3:spec.template.spec.containers[0].env[1].value # PASSWORD
+      - Deployment:c9idev3-deployment:spec.template.spec.containers[0].env[1].value 
 starRank:
   rate: 1.0
