Add PVC mounting
This is to customize PVC mounting later on.

--- a/cloud9.yaml
+++ b/cloud9.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -24,11 +25,18 @@ spec:
           limits:
             cpu: "2"
             memory: "2048Mi"
+        volumeMounts:
+          - name: workspace-pvc
+            mountPath: /workspace
         env:
         - name: C9_USERNAME
           value: "override"
         - name: C9_PASSWORD
           value: "this"
+    volumes:
+        - name: workspace-pvc
+          persistentVolumeClaim:
+           claimName: workspace-pvc 
 ---
 kind: Service
 apiVersion: v1
@@ -40,3 +48,18 @@ spec:
     port: 8181
   selector:
     app: cloud9-v3
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: workspace-pvc
+  annotations:
+    storage.staroid.com/scope: Instance
+spec:
+  storageClassName: ssd
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 50Gi
