Assign as dedicated pod
Apparently gVisor pods are not granted sudo, let's see if a dedicated would fare well.

--- a/cloud9.yaml
+++ b/cloud9.yaml
@@ -10,6 +10,8 @@ spec:
   template:
     metadata:
       labels:
+        pod.staroid.com/isolation: dedicated
+        pod.staroid.com/instance-type: standard-2
         app: cloud9-v2
     spec:
       containers:
