Set C9v3 to dedicated
gVisor pods are not granted sudo so we would have to schedule this in a dedicated pod instead.

--- a/cloud9.yaml
+++ b/cloud9.yaml
@@ -11,6 +11,8 @@ spec:
   template:
     metadata:
       labels:
+        pod.staroid.com/isolation: dedicated
+        pod.staroid.com/instance-type: standard-2
         app: cloud9-v3
     spec:
       containers:
